{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 40,
  "lineage": "521972ca-af95-737b-ce8d-a8fcb5fcc8c5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e86c7f26d568aaa3",
            "arn": "arn:aws:ec2:us-west-2:538707363561:elastic-ip/eipalloc-0e86c7f26d568aaa3",
            "association_id": "eipassoc-01ebc200d656329dd",
            "domain": "vpc",
            "id": "eipalloc-0e86c7f26d568aaa3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c26ed9aa73b987cd",
            "private_dns": "ip-10-0-10-72.us-west-2.compute.internal",
            "private_ip": "10.0.10.72",
            "public_dns": "ec2-184-34-192-203.us-west-2.compute.amazonaws.com",
            "public_ip": "184.34.192.203",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "eks-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "eks-cluster-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "eipalloc-0e86c7f26d568aaa3",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:internet-gateway/igw-04fe83f687e6c1610",
            "id": "igw-04fe83f687e6c1610",
            "owner_id": "538707363561",
            "region": "us-west-2",
            "tags": {
              "Name": "eks-cluster-igw"
            },
            "tags_all": {
              "Name": "eks-cluster-igw"
            },
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "igw-04fe83f687e6c1610",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e86c7f26d568aaa3",
            "association_id": "eipassoc-01ebc200d656329dd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-091d2dfdd4aa70da4",
            "network_interface_id": "eni-0c26ed9aa73b987cd",
            "private_ip": "10.0.10.72",
            "public_ip": "184.34.192.203",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0847a4eba444bbe16",
            "tags": {
              "Name": "eks-cluster-nat"
            },
            "tags_all": {
              "Name": "eks-cluster-nat"
            },
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "nat-091d2dfdd4aa70da4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a012ffcede4050731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-091d2dfdd4aa70da4",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0a012ffcede405073",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0a012ffcede405073"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04fe83f687e6c1610",
            "id": "r-rtb-08df042f757b4d5281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-08df042f757b4d528",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-08df042f757b4d528"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:route-table/rtb-0a012ffcede405073",
            "id": "rtb-0a012ffcede405073",
            "owner_id": "538707363561",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091d2dfdd4aa70da4",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "rtb-0a012ffcede405073",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:route-table/rtb-08df042f757b4d528",
            "id": "rtb-08df042f757b4d528",
            "owner_id": "538707363561",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fe83f687e6c1610",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "rtb-08df042f757b4d528",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a353055c5f27cce",
            "region": "us-west-2",
            "route_table_id": "rtb-0a012ffcede405073",
            "subnet_id": "subnet-0a0b171a6a3a7ab46"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "rtbassoc-08a353055c5f27cce",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd2b38febec64fa",
            "region": "us-west-2",
            "route_table_id": "rtb-08df042f757b4d528",
            "subnet_id": "subnet-0847a4eba444bbe16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "rtbassoc-08bd2b38febec64fa",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:security-group/sg-06d77620ed7fc6608",
            "description": "Security group for EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d77620ed7fc6608",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "538707363561",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "sg-06d77620ed7fc6608",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:subnet/subnet-0a0b171a6a3a7ab46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0b171a6a3a7ab46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "538707363561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "eks-cluster-private-subnet"
            },
            "tags_all": {
              "Name": "eks-cluster-private-subnet"
            },
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "subnet-0a0b171a6a3a7ab46",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:subnet/subnet-0847a4eba444bbe16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847a4eba444bbe16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "538707363561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "eks-cluster-public-subnet"
            },
            "tags_all": {
              "Name": "eks-cluster-public-subnet"
            },
            "vpc_id": "vpc-0670ffc60075a5616"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "subnet-0847a4eba444bbe16",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:538707363561:vpc/vpc-0670ffc60075a5616",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088b4e00f33df7a00",
            "default_route_table_id": "rtb-0d3a0e3b2b1a12d6b",
            "default_security_group_id": "sg-0bcda56a980531f4d",
            "dhcp_options_id": "dopt-0f1bb250cc7effcc2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0670ffc60075a5616",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3a0e3b2b1a12d6b",
            "owner_id": "538707363561",
            "region": "us-west-2",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "538707363561",
            "id": "vpc-0670ffc60075a5616",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}